force-app/main/default/objects/MonthlyGoal__c/MonthlyGoal__c.object-meta.xml
<CustomObject>
    <label>Meta Mensal</label>
    <nameField>
        <displayFormat>META-{000000000}</displayFormat>
        <label>Código de Meta Mensal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metas Mensais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>