force-app/main/default/objects/MonthlyGoal__c/fields/AccountGoalMdt__c.field-meta.xml
<CustomField>
    <fullName>AccountGoalMdt__c</fullName>
    <label>Meta de Campanha</label>
    <referenceTo>AccountGoal__c</referenceTo>
    <relationshipLabel>Metas Mensais</relationshipLabel>
    <relationshipName>MonthlyGoals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>