force-app/main/default/objects/MonthlyGoal__c/fields/AccountMdt__c.field-meta.xml
<CustomField>
    <fullName>AccountMdt__c</fullName>
    <label>Agrupamento</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Metas Mensais</relationshipLabel>
    <relationshipName>MonthlyGoals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>