force-app/main/default/objects/MonthlyGoal__c/fields/BenefitCriteriaFml__c.field-meta.xml
<CustomField>
    <fullName>BenefitCriteriaFml__c</fullName>
    <formula>CampaignMechanicsLkp__r.BenefitCriteriaLkp__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critério do Benefício</label>
    <type>Text</type>
</CustomField>