force-app/main/default/objects/MonthlyGoal__c/fields/BenefitPercentageNmb__c.field-meta.xml
<CustomField>
    <fullName>BenefitPercentageNmb__c</fullName>
    <label>Porcentagem do Benefício</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>