force-app/main/default/objects/MonthlyGoal__c/fields/BenefitRevenueNmb__c.field-meta.xml
<CustomField>
    <fullName>BenefitRevenueNmb__c</fullName>
    <label>Faturamento Benefício</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>