force-app/main/default/objects/MonthlyGoal__c/fields/CalculationBasisFml__c.field-meta.xml
<CustomField>
    <fullName>CalculationBasisFml__c</fullName>
    <formula>BenefitRevenueNmb__c - NCDiscountsBenefitNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base de Cálculo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>