force-app/main/default/objects/MonthlyGoal__c/fields/CampaignMechanicsLkp__c.field-meta.xml
<CustomField>
    <fullName>CampaignMechanicsLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mecânica de Campanha</label>
    <referenceTo>CampaignMechanics__c</referenceTo>
    <relationshipLabel>Metas Mensais</relationshipLabel>
    <relationshipName>MonthlyGoals</relationshipName>
    <type>Lookup</type>
</CustomField>