force-app/main/default/objects/MonthlyGoal__c/fields/GoalNmb__c.field-meta.xml
<CustomField>
    <fullName>GoalNmb__c</fullName>
    <label>Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>