force-app/main/default/objects/MonthlyGoal__c/fields/GroupCodeFml__c.field-meta.xml
<CustomField>
    <fullName>GroupCodeFml__c</fullName>
    <formula>AccountMdt__r.GroupCodeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Agrupamento</label>
    <type>Text</type>
</CustomField>