force-app/main/default/objects/MonthlyGoal__c/fields/MonthDte__c.field-meta.xml
<CustomField>
    <fullName>MonthDte__c</fullName>
    <label>Mês Data</label>
    <type>Date</type>
</CustomField>