force-app/main/default/objects/MonthlyGoal__c/fields/MonthNmb__c.field-meta.xml
<CustomField>
    <fullName>MonthNmb__c</fullName>
    <label>Mês</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>