force-app/main/default/objects/MonthlyGoal__c/fields/NCDiscountsBenefitNmb__c.field-meta.xml
<CustomField>
    <fullName>NCDiscountsBenefitNmb__c</fullName>
    <label>Descontos NC Benefício</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>