force-app/main/default/objects/MonthlyGoal__c/fields/NCDiscountsNmb__c.field-meta.xml
<CustomField>
    <fullName>NCDiscountsNmb__c</fullName>
    <label>Descontos NC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>