force-app/main/default/objects/MonthlyGoal__c/fields/RealizedFml__c.field-meta.xml
<CustomField>
    <fullName>RealizedFml__c</fullName>
    <formula>RevenueNmb__c -  NCDiscountsNmb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>