force-app/main/default/objects/MonthlyGoal__c/fields/RealizedPercentageFml__c.field-meta.xml
<CustomField>
    <fullName>RealizedPercentageFml__c</fullName>
    <formula>IF(GoalNmb__c &lt;&gt; 0, RevenueNmb__c / GoalNmb__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentagem Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>