force-app/main/default/objects/MonthlyGoal__c/fields/StatusTxt__c.field-meta.xml
<CustomField>
    <fullName>StatusTxt__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountGoalStatus</valueSetName>
    </valueSet>
</CustomField>